--- a/index.html
+++ b/index.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Bootstrap  -->
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <title>Learn Javascript</title>
 </head>
 <body>
+
+    <div class="container">
+        <div id="header">
+            <h1>BREAKING BAD API</h1>
+        </div>
+        <!-- <select class="form-control">
+            <option value=""></option>
+        </select> -->
+        <div id="content">
+           
+        </div>
+    </div>
     
-    <div id="content"></div>
+    <!-- <div id="content">
+      <div id="actor"></div>
+        <h1></h1>
+        <h4></h4>
+        <img src="" alt="" height="350px" width="350px">
+    </div> -->
    
     <script src="app.js"></script>
 </body>
